--- a/styles.css
+++ b/styles.css
@@ -357,46 +357,6 @@ iframe {
   color: white;
 }
 
-@media screen and (max-width: 850px) {
-  .btn-container {
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 6rem;
-  }
-
-  .btn-locations {
-    border-radius: 0 0 0 0;
-    border: 1px solid black;
-    height: 10rem;
-  }
-
-  .quote-row {
-    display: flex;
-    flex-direction: column;
-
-    background-color: #f8f9fa;
-    align-items: center;
-    justify-content: center;
-    row-gap: 12rem;
-  }
-
-  .grid-4-cols {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 8rem;
-
-    margin-bottom: 12rem;
-    margin-top: 8.8rem;
-  }
-
-  .locations-grid {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 8rem;
-    border: 1px solid black;
-  }
-}
-
 .btn-submit {
   font-size: 3rem;
   padding: 1rem;
@@ -406,7 +366,6 @@ iframe {
 .storeH1 {
   padding-top: 7rem;
 }
-
 .companyNameH1 {
   padding-top: 2.4rem;
 }
@@ -437,5 +396,57 @@ iframe {
   .btn--close-modal {
     top: 8%;
     right: 15%;
+  }
+
+  .office-info {
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .storeH1 {
+    font-size: 4rem !important;
+  }
+
+  .btn-container {
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 6rem;
+  }
+
+  .btn-locations {
+    border-radius: 0 0 0 0;
+    border: 1px solid black;
+    height: 8rem;
+    font-size: 1.8rem;
+  }
+
+  .quote-row {
+    display: flex;
+    flex-direction: column;
+
+    background-color: #f8f9fa;
+    align-items: center;
+    justify-content: center;
+    row-gap: 12rem;
+  }
+
+  .features-mob {
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+  }
+
+  .locations-grid {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 8rem;
+    border: 1px solid black;
+  }
+
+  .btn-class {
+    display: flex;
+    font-size: 3.4rem;
+    justify-content: center;
+    gap: 1rem;
   }
 }
