--- a/styles.css
+++ b/styles.css
@@ -449,4 +449,12 @@ iframe {
     justify-content: center;
     gap: 1rem;
   }
+
+  .modal__form {
+    margin: 0 4.8rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    gap: 0.8rem;
+  }
 }
