--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ li {
 .opener h1 {
   font-size: 8.6rem;
   margin-bottom: 1.6rem;
-  font-weight: 70rem;
+  font-weight: 700;
 }
 
 .opener p {
@@ -151,7 +151,7 @@ h2 {
   display: inline-block;
 
   padding: 2rem;
-  margin-top: 5rem;
+
   cursor: pointer;
   font-weight: 700;
   text-decoration: none;
@@ -162,6 +162,10 @@ h2 {
 }
 .btn {
   font-size: 30px;
+}
+
+.quote-ask {
+  margin-bottom: 5rem;
 }
 
 .quote-btn-index:link,
@@ -312,7 +316,6 @@ iframe {
 .modal__form button {
   grid-column: 1 / span 2;
   justify-self: center;
-  margin-top: 1 rem;
 }
 
 .btn--close-modal {
