--- a/BASEBALL/styles.css
+++ b/BASEBALL/styles.css
@@ -234,10 +234,9 @@ th:first-child {
 #canvas1 {
   background-color: white;
   border: 3px solid black;
-  position: absolute;
-  top: 42%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  padding: 0;
+  margin: auto;
+  display: block;
   width: 400px;
   height: 250px;
 }
